k8s-configs/ping-cloud/base/pingfederate/admin/cloud-generic/statefulset.yaml
# This defines the pingfederate admin statefulset.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate-admin
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-admin
spec:
  serviceName: pingfederate-admin
  selector:
    matchLabels:
      role: pingfederate-admin
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingfederate-admin
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-admin
        entitled-app: "true"
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccountName: pingfederate-admin-serviceaccount
      containers:
      - name: pingfederate-admin
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-apps/pingfederate:PDO-7789-oidc-obfuscation
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        resources:
          requests:
            memory: "4Gi"
            cpu: 1
          limits:
            memory: "4Gi"
            cpu: 1
        volumeMounts:
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: data-dir
          mountPath: /opt/staging/jmx_prometheus_javaagent-0.14.0.jar
          subPath: jmx_prometheus_javaagent-0.14.0.jar
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: data-dir
          mountPath: /opt/staging/native-s3-ping.jar
          subPath: native-s3-ping.jar
        - name: out-dir
          mountPath: /opt/out
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - name: data-dir
          mountPath: /opt/staging/p14c_env_vars
          subPath: p14c_env_vars
        - name: data-dir
          mountPath: /opt/staging/solutions_artifacts
          subPath: solutions_artifacts
        - mountPath: /etc/podinfo
          name: podinfo
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pf-admin-readiness.sh ]
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-admin-liveness.sh ]
          initialDelaySeconds: 90
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: pf-admin
          containerPort: 9999
      securityContext:
        fsGroup: 9999
      volumes:
      - name: podinfo
        downwardAPI:
          items:
            - path: labels
              fieldRef:
                fieldPath: metadata.labels
            - path: annotations
              fieldRef:
                fieldPath: metadata.annotations
            - path: cpu_limit
              resourceFieldRef:
                containerName: pingfederate-admin
                divisor: 1m
                resource: limits.cpu
            - path: cpu_request
              resourceFieldRef:
                containerName: pingfederate-admin
                divisor: 1m
                resource: requests.cpu
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      annotations:
        volume.autoscaler.kubernetes.io/ignore: "true"
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingfederate-gp3
      resources:
        requests:
          storage: 20Gi
