k8s-configs/ping-cloud/base/pingfederate/admin/cloud-generic/ingress.yaml
# This defines the private ingress for the pingfederate admin services.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - pingfederate-admin-api-dev.ping-demo.com
  rules:
    - host: pingfederate-admin-api-dev.ping-demo.com
      http:
        paths:
          # This rule gives internal access to the pingfederate admin services.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingfederate-admin
                port:
                  name: pf-admin

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-admin-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
      SecRuleEngine DetectionOnly
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABCDEFGHIJKZ
      SecAuditLogType Serial
      SecAuditLogFormat JSON
      SecAuditLog /dev/stdout
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - pingfederate-admin-dev.ping-demo.com
  rules:
    - host: pingfederate-admin-dev.ping-demo.com
      http:
        paths:
          # This rule gives external access to the PingFederate admin service
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pingfederate-admin
                port:
                  name: pf-admin
